Updated index page

--- a/index.pug
+++ b/index.pug
@@ -31,39 +31,39 @@ include styles.pug
         h2 Car Shopper UX
         p From concept to deep execution on search and details pages. A look at the process and results. 
           a(href='carshopper-ux.html') Read Case Study
-    .card
-      a.image(href='composer-architecture.html' style="background-image: url('img/composer-ui.png'); background-size: cover; background-position: top left;")
-      .content
-        h2 Composer Architecture
-        p Architecture and UX design for users to update and configure their dealership web site. 
-          a(href='composer-architecture.html') Read Case Study
-    .card
-      a.image(href='volkswagen.html' style="background-image: url('img/desktop-small.png'), url('img/slash.png'); background-size: cover; background-position: top center;")
-      .content
-        h2 Volkswagen
-        p Design and development for a forward-facing brand, little innovations that add up. 
-          a(href='volkswagen.html') Read Case Study
-    .card
-      a.image(href='home-page.html' style="background-image: url('img/homepage-hero-civic.png'); background-size: contain; background-position: center center;")
-      .content
-        h2 The Home Page
-        p Overhauling the primary touchpoint for car dealers and lessons learned. 
-          a(href='home-page.html') Read Case Study
-    .card
-      a.image(href='enthusiast.html' style="background-image: url('img/cover-small.jpg'); background-size: cover; background-position: top center;")
-      .content
-        h2 Enthusiast Magazine
-        p Automotive print magazine from logo to layout, photography to editing. 
-          a(href='enthusiast.html') Read Case Study
-    .card
-      a.image(href='design-system.html' style="background-image: url('img/design-system-generator.png'); background-size: 140%; background-position: center center;")
-      .content
-        h2 Design System
-        p Getting the details right for a very extensible and configurable design system for 15,000+ sites. 
-          a(href='design-system.html') Read Case Study
-    .card
-      a.image(href='little-wins.html' style="background-image: url('img/ddc_map.jpg'); background-size: cover; background-position: top center;")
-      .content
-        h2 Little Wins
-        p Not everything in UX is a big project, sometimes its the little changes that make a big impact. 
-          a(href='little-wins.html') Read Case Study
+    //- .card
+    //-   a.image(href='composer-architecture.html' style="background-image: url('img/composer-ui.png'); background-size: cover; background-position: top left;")
+    //-   .content
+    //-     h2 Composer Architecture
+    //-     p Architecture and UX design for users to update and configure their dealership web site. 
+    //-       a(href='composer-architecture.html') Read Case Study
+    //- .card
+    //-   a.image(href='volkswagen.html' style="background-image: url('img/desktop-small.png'), url('img/slash.png'); background-size: cover; background-position: top center;")
+    //-   .content
+    //-     h2 Volkswagen
+    //-     p Design and development for a forward-facing brand, little innovations that add up. 
+    //-       a(href='volkswagen.html') Read Case Study
+    //- .card
+    //-   a.image(href='home-page.html' style="background-image: url('img/homepage-hero-civic.png'); background-size: contain; background-position: center center;")
+    //-   .content
+    //-     h2 The Home Page
+    //-     p Overhauling the primary touchpoint for car dealers and lessons learned. 
+    //-       a(href='home-page.html') Read Case Study
+    //- .card
+    //-   a.image(href='enthusiast.html' style="background-image: url('img/cover-small.jpg'); background-size: cover; background-position: top center;")
+    //-   .content
+    //-     h2 Enthusiast Magazine
+    //-     p Automotive print magazine from logo to layout, photography to editing. 
+    //-       a(href='enthusiast.html') Read Case Study
+    //- .card
+    //-   a.image(href='design-system.html' style="background-image: url('img/design-system-generator.png'); background-size: 140%; background-position: center center;")
+    //-   .content
+    //-     h2 Design System
+    //-     p Getting the details right for a very extensible and configurable design system for 15,000+ sites. 
+    //-       a(href='design-system.html') Read Case Study
+    //- .card
+    //-   a.image(href='little-wins.html' style="background-image: url('img/ddc_map.jpg'); background-size: cover; background-position: top center;")
+    //-   .content
+    //-     h2 Little Wins
+    //-     p Not everything in UX is a big project, sometimes its the little changes that make a big impact. 
+    //-       a(href='little-wins.html') Read Case Study
