--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,7 @@ include styles.pug
   include header-nav.pug
   .cards
     .card
-      a.image(href='transform.html' style="background-image: url('img/desktop-vdp.png'); background-size: 140%; background-position: center center;")
+      a.image(href='transform.html' style="background-image: url('img/transform/transform_cover.png'); background-size: 100%; background-position: center center;")
       .content
         h2 Transform
         p Transform grew from a small design library into a vital internal system.
