--- a/styles.scss
+++ b/styles.scss
@@ -318,6 +318,18 @@ header.minimal {
   }
 }
 
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
 .resume {
   display: flex;
   justify-content: left;
